{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 209,
  "lineage": "0d639c2e-779c-ecc9-78e9-4b7354d47c96",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0e96526ab3a2f170b",
            "default_route_table_id": "rtb-0e96526ab3a2f170b",
            "id": "rtb-0e96526ab3a2f170b",
            "owner_id": "939735320461",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-vpc-default-route"
            },
            "tags_all": {
              "Name": "test-vpc-default-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:security-group/sg-02784ea78b0360424",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-02784ea78b0360424",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "939735320461",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc-default-sg"
            },
            "tags_all": {
              "Name": "test-vpc-default-sg"
            },
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ad3d6699a648893",
            "domain": "vpc",
            "id": "eipalloc-04ad3d6699a648893",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-92-57.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.92.57",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:internet-gateway/igw-0a8aa31afb9392a41",
            "id": "igw-0a8aa31afb9392a41",
            "owner_id": "939735320461",
            "tags": {
              "Name": "test-vpc-igw"
            },
            "tags_all": {
              "Name": "test-vpc-igw"
            },
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04ad3d6699a648893",
            "association_id": "eipassoc-0a8f099d2a1b9bb23",
            "connectivity_type": "public",
            "id": "nat-0f72ec2a15bbe4efa",
            "network_interface_id": "eni-0d6d7583d78255314",
            "private_ip": "10.0.0.203",
            "public_ip": "13.124.92.57",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07b0b1418f83de7f5",
            "tags": {
              "Name": "test-vpc-ngw"
            },
            "tags_all": {
              "Name": "test-vpc-ngw"
            }
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0bc8c21d346954e19",
            "id": "rtb-0bc8c21d346954e19",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f72ec2a15bbe4efa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-route-pri"
            },
            "tags_all": {
              "Name": "test-vpc-route-pri"
            },
            "timeouts": null,
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:route-table/rtb-0665b4700f6e4b668",
            "id": "rtb-0665b4700f6e4b668",
            "owner_id": "939735320461",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8aa31afb9392a41",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-route-pub"
            },
            "tags_all": {
              "Name": "test-vpc-route-pub"
            },
            "timeouts": null,
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pri",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebb38b97e7283467",
            "route_table_id": "rtb-0bc8c21d346954e19",
            "subnet_id": "subnet-0dbc8ae630df14a16"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d0f5af3199bd431",
            "route_table_id": "rtb-0bc8c21d346954e19",
            "subnet_id": "subnet-0af931a438d934110"
          },
          "dependencies": [
            "aws_eip.nat-eip",
            "aws_nat_gateway.test",
            "aws_route_table.private_route",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routing-asso-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0308ff52fa2c7e267",
            "route_table_id": "rtb-0665b4700f6e4b668",
            "subnet_id": "subnet-07b0b1418f83de7f5"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fdfe0f2350f249f",
            "route_table_id": "rtb-0665b4700f6e4b668",
            "subnet_id": "subnet-019b889daeec72540"
          },
          "dependencies": [
            "aws_internet_gateway.test",
            "aws_route_table.public_route",
            "aws_subnet.public_subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0dbc8ae630df14a16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbc8ae630df14a16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-1"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-1"
            },
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-0af931a438d934110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af931a438d934110",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-private-subnet-2"
            },
            "tags_all": {
              "Name": "test-vpc-private-subnet-2"
            },
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-07b0b1418f83de7f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b0b1418f83de7f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-1"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-1"
            },
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:subnet/subnet-019b889daeec72540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019b889daeec72540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "939735320461",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-vpc-public-subnet-2"
            },
            "tags_all": {
              "Name": "test-vpc-public-subnet-2"
            },
            "vpc_id": "vpc-0936e55767ced4e55"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:939735320461:vpc/vpc-0936e55767ced4e55",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbe6d07fe09ae6ba",
            "default_route_table_id": "rtb-0e96526ab3a2f170b",
            "default_security_group_id": "sg-02784ea78b0360424",
            "dhcp_options_id": "dopt-0946a0de0cb1bcec9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0936e55767ced4e55",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e96526ab3a2f170b",
            "owner_id": "939735320461",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          }
        }
      ]
    }
  ]
}